--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <link type="text/css" rel="stylesheet" href="style.css">
-        <title>Timothé Nicole - resume</title>
+        <title>Timothé Nicole</title>
     </head>
     <body>
-
+        <img src="images/IMG_4229.png" alt="couverture">
     </body>
 </html>
