--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Timothé Nicole</title>
     </head>
     <body>
-        <img src="images/IMG_4229.png" alt="couverture">
+        <div class="wrapper"></div>
+        <img id="couverture" src="images/IMG_4229.png" alt="couverture">
     </body>
 </html>
