--- a/index.html
+++ b/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link type="text/css" rel="stylesheet" href="style.css">
-        <title>Timothé Nicole</title>
-    </head>
-    <body>
-        <div class="wrapper"></div>
-        <img id="couverture" src="images/IMG_4229.png" alt="couverture">
-    </body>
+  <head>
+    <link type="text/css" rel="stylesheet" href="style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
+      crossorigin="anonymous"
+    />
+    <title>Timothé Nicole</title>
+  </head>
+  <body>
+    <div class="wrapper"></div>
+    <div class="container-fluid">
+      <div class="title">
+        <h2>Timothé Nicole</h2>
+        <h4>Looking for an internship in Information Security</h4>
+      </div>
+    </div>
+  </body>
 </html>
