--- a/index.html
+++ b/index.html
@@ -8,12 +8,15 @@
       integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
       crossorigin="anonymous"
     />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>AOS.init()</script>
     <title>Timothé Nicole</title>
   </head>
   <body>
     <div class="wrapper"></div>
     <div class="container-fluid">
-      <div class="title">
+      <div class="title" data-aos="fade-up">
         <h2>Timothé Nicole</h2>
         <h4>Looking for an internship in Information Security</h4>
       </div>
